# extensible-benchmarks

./: README.md  extensible-benchmarks.cabal
benchmarks/: eff-comparison.hs  struct.hs
